<resources>
    <string name="app_name_release">Streakify</string>
    <string name="app_name_debug">Debug Streakify</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_title">Oops</string>
    <string name="error_message">We got an error</string>
    <string name="error_retry">Retry</string>
    <string name="error_cancel">Cancel</string>
    <string name="hint_ok">Ok</string>

    <string name="add_goal">Add Goal</string>

    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="code_india">+91</string>
    <string name="hint_phone_number">9876543210</string>
    <string name="next">Next</string>

    <string name="otpheading">Enter OTP</string>
    <string name="otpdidnotreceive">OTP RESENT. Wait 45s to Resend again</string>
    <string name="otpresend">RESEND OTP</string>
    <string name="hint_submit">Submit</string>
    <string name="done">Done</string>

    <string name="please_enter_valid_otp">Please enter valid Otp.</string>
    <string name="error_otp_empty">Please enter your Otp</string>

    <!-- error Strings-->
    <string name="share_via">Share via</string>
    <string name="error_no_network_connection_error_message">Looks like you don\'t have network connection, check internet connection to try again.</string>
    <string name="error_no_network_connection_error_title">OOPS! NETWORK ERROR</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="error_phone_empty">Please enter Mobile number.</string>
    <string name="please_enter_valid_number">Please enter valid Mobile number.</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="could_not_connect_to_the_internet_please_check_your_network">Could not connect to the internet</string>
    <string name="msg_otp_resent">OTP resent</string>
    <string name="punch_in">Punch In</string>
    <string name="punch_out">Punch Out</string>

    <string name="x_days_streak">%1$s days streak</string>
    <string name="x_of_ydays_streak">%1$s/%2$s days streak</string>
    <string name="streak_name">Streak Name</string>
    <string name="set_goal">Set Goal</string>
    <string name="days">days</string>
    <string name="set_goal_0_for">Set Goal</string>

    <string name="indefinite">Indefinite</string>
    <string name="definite">Definite</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends">Friends</string>
    <string name="country_code">Country Code</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="add_friend">Add Friend</string>
    <string name="streak_detail">Streak Detail</string>
    <string name="edit_">Edit</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_your_friend_to_streakify">Invite your friends to Streakify</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_all">See All</string>
    <string name="remove_friend">Remove Friend</string>

    <string name="you_dont_have_any_more_friend_request">You don\'t have any more friend requests</string>
    <string name="friend">Search Friend</string>
    <string name="search">Search</string>
    <string name="select_friends">Select Friends</string>
    <string name="type_contact_name">Type contact name</string>
    <string name="contact_permission_string">Contact Permission</string>
    <string name="permission_setting_string">Tap Settings > Permissions &amp; Turn Contacts On</string>
    <string name="contact_permission_description">By doing this, you can add friends directly from your phonebook.</string>
    <string name="give_permission_string">GIVE PERMISSION</string>
    <string name="skip">skip</string>
    <string name="add_friend_manually">Add Friend Manually</string>
    <string name="add_photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="camera_app_not_found">Camera App not Found. Unable to Capture Photo!!!</string>
    <string name="select_proper_file">Please Select Proper File</string>
    <string name="select_lesser_file">Please Select less than 20 MB Image</string>
    <string name="msg_token_fmt">"FCM Token : %1$s"</string>
    <string name="share_subject">Share subject</string>
    <string name="share_using">Share using</string>
    <string name="join_me_in_building_grate_habits">Join me in building grate habits</string>
    <string name="join_streakify">Join this  really cool habit building app with me. https://play.google.com/store/apps/details?id=com.streakify.android</string>
    <string name="no_streaks">You do not have any streaks. Add your first.</string>
    <string name="no_active_friends">You have no active friends. Add your first friend by sending them a friend request</string>
    <string name="no_requests">You don\'t have any friend requests</string>
    <string name="no_friends_in_streak">There are no friends added in the streak</string>
    <string name="phone_number_cannot_be_empty">Phone Number Cannot be empty</string>
</resources>