<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.streakify.android.view.dialog.IDialogViewModel" />

        <variable
            name="uiConfig"
            type="com.streakify.android.view.dialog.common.DialogUiConfig" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/dialog_bg"
            android:elevation="@dimen/_6sdp"
            android:paddingStart="@dimen/_18sdp"
            android:paddingTop="@dimen/_14sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:paddingBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialogTitle"
                style="@style/TextViewStyle.BOLD"
                android:layout_marginTop="@dimen/_12sdp"
                android:maxLines="2"
                android:text="@{uiConfig.title}"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                tools:text="@string/error_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialogMessage"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/_12sdp"
                android:maxLines="8"
                android:layout_width="0dp"
                android:text="@{uiConfig.message}"
                app:setGravity="@{uiConfig.gravity}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle"
                tools:text="@string/error_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/positiveClick"
                style="@style/ButtonStyle"
                android:background="@drawable/rounded_rectangle_filled_blue_darkblue_stroke"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@{uiConfig.positiveButtonText}"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@id/negativeClick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogMessage"
                app:onClick="@{viewModel::onPositiveButtonClick}"
                tools:text="@string/error_retry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/negativeClick"
                style="@style/TextViewStyle.BOLD"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:maxLines="2"
                android:paddingTop="@dimen/_12sdp"
                android:text="@{uiConfig.negativeButtonText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/positiveClick"
                app:onClick="@{viewModel::onNegativeButtonClick}"
                app:scrollable="@{true}"
                app:visibleOrGone="@{!uiConfig.negativeButtonText.toString().isEmpty()}"
                tools:text="@string/error_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>