<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.streakify.android.view.home.friends.firendslist.FriendsListVM" />
    </data>

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_width="match_parent">-->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/friend_request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle.MEDIUM"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/friend_requests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_friend_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        tools:listitem="@layout/friend_request_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        app:layout_constraintTop_toBottomOf="@id/friend_request_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/friends_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle.MEDIUM"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/friends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_friend_requests"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_friends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        tools:listitem="@layout/friends_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        app:layout_constraintTop_toBottomOf="@id/friends_list_title"
        app:layout_constraintBottom_toBottomOf="parent" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_friend"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
<!--    </androidx.core.widget.NestedScrollView>-->
</layout>